--- a/.github/workflows/validate-int.yml
+++ b/.github/workflows/validate-int.yml
@@ -1,5 +1,3 @@
-## Validate INT  
-
 name: Validate INT
 
 on:
@@ -11,13 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: docker://tiagofgh/my-sfdx-delta-cli:latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
+        with:
+          fetch-depth: 0
+
+      - name: Fix Git safe directory
+        run: |
+          git config --global --add safe.directory $GITHUB_WORKSPACE
 
       - name: Auth INT
-        env: { AUTH_URL_INT: ${{ secrets.AUTH_URL_INT }} }
+        env:
+          AUTH_URL_INT: ${{ secrets.AUTH_URL_INT }}
         run: |
           echo "$AUTH_URL_INT" > authurl
           sf org login sfdx-url -f authurl -s --alias ORG-TEST
@@ -30,18 +35,18 @@ jobs:
           HEAD="${{ github.head_ref || github.ref_name }}"
           echo "Delta FROM=$BASE TO=$HEAD"
           sfdx sgd:source:delta --to "origin/$HEAD" --from "origin/$BASE" --output "." --generate-delta
-          if [ ! -f manifest/package.xml ]; then
-            echo "No hay cambios para validar."
+          if [ ! -f "manifest/package.xml" ]; then
+            echo "No hay cambios para desplegar"
             exit 0
           fi
-          sed -n '1,120p' manifest/package.xml || true
 
       - name: Validate in INT
-        env: { TESTLEVEL: ${{ secrets.TESTLEVEL || 'RunLocalTests' }} }
+        env:
+          TESTLEVEL: ${{ secrets.TESTLEVEL || 'RunLocalTests' }}
         run: |
           sf project deploy validate \
             --manifest manifest/package.xml \
             --target-org ORG-TEST \
             --wait 10 \
-            --test-level "$TESTLEVEL" \
+            --test-level $TESTLEVEL \
             --verbose
