--- a/.github/workflows/validate-int.yml
+++ b/.github/workflows/validate-int.yml
@@ -8,7 +8,7 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     container:
-      image: docker://tiagofgh/my-sfdx-delta-cli:latest
+      image: docker://tiagofgh/my-sfdx-delta-cli:v1.0.1
 
     steps:
       - name: Checkout
