change Docker and INT deplo

--- a/.github/workflows/validate-int.yml
+++ b/.github/workflows/validate-int.yml
@@ -8,7 +8,7 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     container:
-      image: docker://tiagofgh/my-sfdx-delta-cli:v1.0.2
+      image: docker://tiagofgh/my-sfdx-delta-cli:v1.0.5
 
     steps:
       - name: Checkout
@@ -17,8 +17,7 @@ jobs:
           fetch-depth: 0
 
       - name: Fix Git safe directory
-        run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Auth INT
         env:
@@ -28,23 +27,22 @@ jobs:
           sf org login sfdx-url -f authurl -s --alias ORG-TEST
           sf org display --target-org ORG-TEST
 
-      - name: SF version & plugins
-        run: |
-          sf --version
-          sf plugins
-
       - name: Delta (PR base vs head)
         run: |
           git fetch --all --prune
+
           BASE="${{ github.base_ref || 'main' }}"
           HEAD="${{ github.head_ref || github.ref_name }}"
           echo "Delta FROM=$BASE TO=$HEAD"
-          sf sgd:source:delta \
+
+          # Sintaxis correcta del plugin (con ESPACIOS)
+          sf sgd source delta \
             --to "origin/$HEAD" \
             --from "origin/$BASE" \
             --output "." \
             --generate-delta
-          if [ ! -f "manifest/package.xml" ]; then
+
+          if [ ! -f manifest/package.xml ]; then
             echo "No hay cambios para validar en INT."
             exit 0
           fi
