--- a/docker/sfdx-delta-cli/Dockerfile
+++ b/docker/sfdx-delta-cli/Dockerfile
@@ -1,5 +1,8 @@
 FROM node:18-slim
 
+# Usar bash para que los pipes/OR funcionen igual en amd64/arm64
+SHELL ["/bin/bash", "-lc"]
+
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -12,13 +15,19 @@ ENV SF_AUTOUPDATE_DISABLE=true \
     SF_USE_PROGRESS_BAR=false \
     CI=true
 
-# Instalar Salesforce CLI y el plugin sfdx-git-delta (no-interactivo)
+# Instalar Salesforce CLI + sfdx-git-delta con fallback
 RUN npm install -g @salesforce/cli \
  && sf --version \
  && sf plugins --core \
+ # intento 1: instalar vía sf, auto-aceptando el prompt
  && yes | sf plugins install sfdx-git-delta --force \
+ # si lo anterior fallara por cualquier motivo, fallback a npm global
+ || npm install -g sfdx-git-delta \
+ # mostrar plugins instalados
  && sf plugins \
- && sf help sgd:source:delta \
- && npm cache clean --force
+ # validar que el comando existe (si no, fallar)
+ && sf help sgd:source:delta >/dev/null 2>&1 \
+ || (echo 'sfdx-git-delta no quedó disponible' && exit 1)
 
 WORKDIR /workspace
+
